2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp (EmitCheckForNull): Add a method
	which emits a check for null-qualified expressions,
	shared between...
	(EmitClassInstanceCreationExpression): 
	(EmitSuperInvocation): Use EmitCheckForNull to
	improve checks of qualified expressions (bugs 171,
	419).
	* src/body.cpp (ProcessSuperCall): Fix qualified
	super calls to allow subclasses of the enclosing
	class, in line with JLS 8.8.5.1 (bug 401).

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitFieldAccessLhsBase):
	Removed redundant code.
	(EmitAssignmentExpression, EmitMethodInvocation)
	(LoadVariable, LoadReference): Fix assignments
	to static fields, calls to static methods,
	increments of static fields, and accesses to
	static methods, so that qualifying expressions
	are evaluated (bug 132).  Improve the error
	checking by adding asserts on dead code branches.

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAssignmentExpression):
	Fixed a bad cast, which was causing bug 234.

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitPostUnaryExpressionField)
	(EmitPreUnaryIncrementExpressionArray):
	Fix bad bytecodes when performing increment
	operators on sub-integers (bugs 127, 223).

2001-05-06  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefiniteBlock)
	(DefiniteSwitchStatement, DefiniteTryStatement):
	Changed the definite algorithm to quit checking
	variables that went out of scope, fixing bug
	253 and related.

2001-05-06  ??  <kumaran@alumni.stanford.org>

	* src/control.cpp (ProcessBodies): fix
	timestamp assert failure on Windows builds
	fixes bugs 128, 406. (by way of Eric).

2001-05-04  Pascal Davoust  <davoustp@yahoo.com>

	* control.cpp (Control): fix MSVC build break
	because of duplicate variables in for loops.

2001-05-04  Eric Blake  <ebb9@email.byu.edu>

	* src/lookup.h (IsConstant): 
	* src/lookup.cpp (IsConstant, CheckStringConstant): 